<resources>
    <string name="app_name">ENAZ Store</string>
    <string name="mot_de_passe">Mot de passe..</string>
    <string name="se_souvenir_de_moi">Se souvenir de moi</string>
    <string name="connexion">Connexion</string>
    <string name="fullname">Nom et prenom..</string>
    <string name="email">Email..</string>
    <string name="num_ro_de_t_l_phone">Numéro de téléphone..</string>
    <string name="cr_er_compte">Créer compte</string>
    <string name="cr_er_votre_compte">Créer votre compte </string>
    <string name="se_connecter">Se connecter </string>
    <string name="se_d_connecter">Se déconnecter</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="adresse">Adresse..</string>
    <string name="mot_de_passe_oubli"><u>Mot de passe oublié?</u></string>
    <string name="chercher_d_couvrir_payer_en_ligne">Chercher, découvrir, payer en ligne..</string>
    <string name="cr_er_un_compte">Créer un compte</string>
    <string name="d_ja_membre_se_connecter">Déja membre? se connecter</string>
    <string name="que_recherchez_vous">Que recherchez vous?</string>
    <string-array name="categories">
        <item>Ordinateurs</item>
        <item>Téléphones et tablettes</item>
        <item>Vêtements</item>
        <item>Chaussures</item>
        <item>Jeux video et consoles</item>
        <item>Accessoires mode</item>
        <item>Télévisions</item>
    </string-array>
</resources>