<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAE9EF"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/applogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/se_connecter"
        android:textColor="#121212"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/email_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/email_login"
        android:layout_width="match_parent"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#121212"
        android:background="@drawable/input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo"
        app:layout_constraintVertical_bias="0.23" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_height="50dp"
        android:background="@drawable/primarybutton"
        android:text="@string/connexion"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.253"
        tools:ignore="MissingConstraints" />

    <com.rey.material.widget.CheckBox
        android:id="@+id/remember_me"
        style="@style/Material.Drawable.CheckBox"
        android:layout_width="match_parent"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:textAlignment="textStart"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:text="@string/se_souvenir_de_moi"
        android:textColor="#121212"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints,RtlCompat" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_height="50dp"
        android:hint="@string/mot_de_passe"
        android:background="@drawable/input"
        android:inputType="textPassword"
        android:textColor="#121212"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo"
        app:layout_constraintVertical_bias="0.359" />


</androidx.constraintlayout.widget.ConstraintLayout>