<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAE9EF"
    tools:context=".RegisterActivity">


    <ScrollView
        android:layout_below="@+id/app_bar_setting"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="66dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="69dp"
        android:src="@drawable/applogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cr_er_votre_compte"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toTopOf="@+id/fullname_register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app_logo"
                tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/fullname_register"
        android:layout_width="match_parent"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:hint="@string/fullname"
        android:inputType="text"
        android:background="@drawable/input"
        android:padding="10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo"
        tools:ignore="MissingConstraints" />
    <EditText
        android:id="@+id/email_register"
        android:layout_width="match_parent"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        android:background="@drawable/input"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullname_register" />

    <EditText
        android:id="@+id/phone_register"
        android:layout_width="match_parent"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:hint="@string/num_ro_de_t_l_phone"
        android:maxLength="10"
        android:inputType="phone"
        android:textColor="@color/black"
        android:background="@drawable/input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_register"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/password_register"
        android:layout_width="match_parent"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        android:background="@drawable/input"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_register"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_height="50dp"
        android:background="@drawable/successbutton"
        android:textColor="@color/white"
        android:text="@string/cr_er_compte"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_register"
        app:layout_constraintVertical_bias="0.182"
        tools:ignore="MissingConstraints" />

    </LinearLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>