<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#EAE9EF"
    >

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/applogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/chercher_d_couvrir_payer_en_ligne"
        android:textAlignment="center"
        android:textColor="#121212"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/signin_btn"
        android:layout_width="355dp"
        android:layout_height="48dp"
        android:textColor="@color/white"
        android:background="@drawable/primarybutton"
        android:text="@string/cr_er_un_compte"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.924"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="355dp"
        android:layout_height="48dp"
        android:background="@drawable/secondarybutton"
        android:text="@string/d_ja_membre_se_connecter"
        android:textColor="#007bff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.53"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>